<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutMeActivity"
    android:background="@color/background"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_15sdp"
        >

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/background_circle_outline_black"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/color_text" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_20sdp"

            android:background="@color/color_text"

            app:layout_constraintTop_toBottomOf="@id/btnBack"/>

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:background="@color/background"

            android:text="@string/about_me_title"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/linotte_heavy"
            android:textColor="@color/color_text"
            android:includeFontPadding="false"
            app:layout_constraintTop_toTopOf="@id/line"
            app:layout_constraintBottom_toBottomOf="@id/line"
            app:layout_constraintStart_toStartOf="@id/line"
            app:layout_constraintEnd_toEndOf="@id/line"/>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/avatar"
            app:riv_oval="true"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitle"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/linotte_bold"
            android:includeFontPadding="false"
            android:text="Huỳnh Thanh Nhã"
            android:gravity="center"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/color_text"

            app:layout_constraintTop_toBottomOf="@id/avatar"/>

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/linotte_regular"
            android:includeFontPadding="false"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/color_text"
            android:gravity="center"
            android:text="@string/about"

            app:layout_constraintTop_toBottomOf="@id/name"/>

        <TextView
            android:id="@+id/about2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/linotte_regular"
            android:includeFontPadding="false"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/color_text"
            android:gravity="center"
            android:text="@string/email_thanhnhahuynh1509_gmail_com"

            app:layout_constraintTop_toBottomOf="@id/about"/>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_35sdp"

            android:background="@color/color_text"

            app:layout_constraintTop_toBottomOf="@id/about2"/>

        <TextView
            android:id="@+id/textTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:background="@color/background"

            android:text="@string/about_this_app"
            android:textSize="@dimen/_16ssp"
            android:fontFamily="@font/linotte_heavy"
            android:textColor="@color/color_text"
            android:includeFontPadding="false"
            app:layout_constraintTop_toTopOf="@id/line2"
            app:layout_constraintBottom_toBottomOf="@id/line2"
            app:layout_constraintStart_toStartOf="@id/line2"
            app:layout_constraintEnd_toEndOf="@id/line2"/>

        <TextView
            android:id="@+id/aboutThisApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/linotte_regular"
            android:includeFontPadding="false"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/color_text"
            android:gravity="center"
            android:text="@string/about_app_1"

            app:layout_constraintTop_toBottomOf="@id/textTitle2"/>

        <TextView
            android:id="@+id/aboutThisApp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/linotte_regular"
            android:includeFontPadding="false"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/color_text"
            android:gravity="center"
            android:text="@string/about_app2"

            app:layout_constraintTop_toBottomOf="@id/aboutThisApp"/>
        <TextView
            android:id="@+id/aboutThisApp3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/linotte_regular"
            android:includeFontPadding="false"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/color_text"
            android:gravity="center"
            android:text="@string/about_app_3"

            app:layout_constraintTop_toBottomOf="@id/aboutThisApp2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>