<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_15sdp"
    android:background="#F1F1F1"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/itTimeTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/linotte_regular"
        android:text="@string/it_s_time_to"
        android:textColor="@color/color_text"
        android:textSize="@dimen/_14sdp"


        app:layout_constraintEnd_toStartOf="@id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/avatar" />


    <TextView
        android:id="@+id/makeSomeNotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/linotte_bold"
        android:text="MAKE YOU REMEMBER"
        android:textColor="@color/color_text_bold"
        android:textSize="@dimen/_16sdp"

        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toStartOf="@id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/avatar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/_8sdp">

        <ImageView
            android:id="@+id/btnChangeLayout"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:padding="@dimen/_13sdp"
            android:src="@drawable/grid"
            android:adjustViewBounds="true"
            />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/searchBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/makeSomeNotes"
        android:background="@drawable/search_box_background"
        android:gravity="center_vertical"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:src="@drawable/ic_search"
            app:tint="@color/color_text"
            />

        <EditText
            android:id="@+id/textSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:fontFamily="@font/linotte_regular"
            android:textColorHint="@color/color_text_hint"
            android:textColor="@color/color_text"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:hint="@string/search_here"

            android:textSize="@dimen/_13ssp"
            tools:targetApi="o" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/itemNoteNothing"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_3sdp"
        app:layout_constraintTop_toBottomOf="@id/searchBox"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/key"
                    android:fontFamily="@font/linotte_regular"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/color_text"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/nothing_here"
                android:fontFamily="@font/linotte_bold"
                android:textSize="@dimen/_20ssp"
                android:textColor="@color/color_text"
                android:gravity="center"
                android:ellipsize="end"
                android:maxLines="3"
                />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_35sdp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/value"
                    android:fontFamily="@font/linotte_regular"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/color_text"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/click_the_green_button"
                android:fontFamily="@font/linotte_bold"
                android:textSize="@dimen/_20ssp"
                android:textColor="@color/color_text"
                android:ellipsize="end"
                android:maxLines="3"
                android:gravity="center"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/notesContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/_10sdp"

        app:layout_constraintTop_toBottomOf="@id/searchBox"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesContainerLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:visibility="gone"

        app:layout_constraintTop_toBottomOf="@id/searchBox"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"/>

    <ImageView
        android:id="@+id/btnAdd"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/rounded_button"
        android:src="@drawable/ic_add"
        android:padding="@dimen/_10sdp"
        app:tint="@color/white"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/btnQuiz"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:src="@drawable/question"
        android:padding="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_35sdp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btnAdd"
        app:layout_constraintTop_toTopOf="@id/btnAdd"
        />

    <ImageView
        android:id="@+id/btnSettings"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:src="@drawable/gear"
        android:padding="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_35sdp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/btnAdd"
        app:layout_constraintTop_toTopOf="@id/btnAdd"
        />


</androidx.constraintlayout.widget.ConstraintLayout>